# mbew

./: .amccmake.conf  .gitmodules  .syntastic  .syntastic_c  .syntastic_cpp  CLAUDE.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md
data/: frontcenter.webm  reticle.h
examples/: CMakeLists.txt  mbew-example-audio-ao.c  mbew-example-audio-sdl.c  mbew-example-c++.cpp  mbew-example-iterate.c  mbew-example-properties.c  mbew-example-src-memory.c  mbew-example-strings.c  mbew-example-video-cairo.c  mbew-example-video-osg.cpp  mbew-example-video-sdl-threaded.c  mbew-example-video-sdl.c  mbew-iterate.c  mbew-properties-detailed.c  mbew-properties.c  mbew-strings.c  mbew-video-cairo.c  mbew-video-osg.cpp  mbew-video-sdl.c
ext/mbew-nestegg/: CMakeLists.txt
ext/mbew-nestegg/mozilla-ref/: README.md  nestegg.c
ext/mbew-ogg/: CMakeLists.txt
ext/mbew-opus/: CMakeLists.txt
ext/mbew-opus/os-linux/: config.h
ext/mbew-vorbis/: CMakeLists.txt
ext/mbew-vpx/: CMakeLists.txt  README.md  vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h
ext/mbew-vpx/os-linux/: vp8_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
ext/mbew-vpx/os-linux/x86_64/: vpx_config.c
ext/mbew-vpx/os-windows/: vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h
ext/mbew-vpx/os-windows/x86/: vp9_rtcd.h  vpx_config.asm  vpx_config.c  vpx_config.h  vpx_dsp_rtcd.h
ext/mbew-vpx/os-windows/x86_64/: vpx_config.c  vpx_config.h  vpx_version.h
src/: mbew-format.c  mbew-io.c  mbew-iterate.c  mbew-private.h  mbew-string.c  mbew.c  mbew.h  mbew.hpp
