include(FindPkgConfig)

function(add_mbew_example name ext)
    add_executable(mbew-example-${name} mbew-example-${name}.${ext})
    target_link_libraries(mbew-example-${name} PRIVATE mbew)
    if(NOT WIN32)
        target_link_libraries(mbew-example-${name} PRIVATE pthread m)
    endif()
endfunction()

add_mbew_example(c++ cpp)
add_mbew_example(iterate c)
add_mbew_example(properties c)
add_mbew_example(src-memory c)
add_mbew_example(strings c)

if(NOT WIN32)
    # SDL2 (audio example)
    find_package(SDL2 QUIET)
    if(SDL2_FOUND)
        add_executable(mbew-example-audio-sdl mbew-example-audio-sdl.c)
        target_link_libraries(mbew-example-audio-sdl PRIVATE mbew SDL2::SDL2 pthread m)
    else()
        message(STATUS "SDL2 not found; skipping mbew-example-audio-sdl")
    endif()

    # SDL3 (video example)
    find_package(SDL3 QUIET)
    if(SDL3_FOUND)
        add_executable(mbew-example-video-sdl mbew-example-video-sdl.c)
        target_link_libraries(mbew-example-video-sdl PRIVATE mbew SDL3::SDL3 pthread m)
    else()
        message(STATUS "SDL3 not found; skipping mbew-example-video-sdl")
    endif()

    # OpenSceneGraph
    find_package(OpenSceneGraph QUIET COMPONENTS osgViewer)
    if(OPENSCENEGRAPH_FOUND)
        add_executable(mbew-example-video-osg mbew-example-video-osg.cpp)
        target_include_directories(mbew-example-video-osg PRIVATE ${OPENSCENEGRAPH_INCLUDE_DIRS})
        target_link_libraries(mbew-example-video-osg PRIVATE mbew ${OPENSCENEGRAPH_LIBRARIES} pthread m)
    else()
        message(STATUS "OpenSceneGraph not found; skipping OSG example")
    endif()

    # Cairo
    pkg_check_modules(Cairo QUIET IMPORTED_TARGET cairo)
    if(Cairo_FOUND)
        add_executable(mbew-example-video-cairo mbew-example-video-cairo.c)
        target_link_libraries(mbew-example-video-cairo PRIVATE mbew PkgConfig::Cairo pthread m)
    else()
        message(STATUS "Cairo not found; skipping Cairo example")
    endif()

    # libao
    pkg_check_modules(LibAO QUIET IMPORTED_TARGET ao)
    if(LibAO_FOUND)
        add_executable(mbew-example-audio-ao mbew-example-audio-ao.c)
        target_link_libraries(mbew-example-audio-ao PRIVATE mbew PkgConfig::LibAO pthread m)
    else()
        message(STATUS "libao not found; skipping libao example")
    endif()
endif()
