PROJECT(mbew-ogg)

ADD_SUBDIRECTORY("ogg" EXCLUDE_FROM_ALL)

SET(MBEW_OGG_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/ogg/include")

FOREACH(VAR OGG_HEADERS OGG_SOURCES)
	GET_DIRECTORY_PROPERTY(VAR_FILES DIRECTORY "ogg" DEFINITION ${VAR})

	FOREACH(VF ${VAR_FILES})
		LIST(APPEND MBEW_OGG_FILES "ogg/${VF}")
	ENDFOREACH()
ENDFOREACH()

INCLUDE_DIRECTORIES(${MBEW_OGG_INCLUDE_DIRS})

ADD_LIBRARY(mbew-ogg ${MBEW_OGG_FILES})

