PROJECT(mbew-vorbis)

ADD_SUBDIRECTORY("vorbis" EXCLUDE_FROM_ALL)

SET(MBEW_VORBIS_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/vorbis/include")

FOREACH(VAR VORBIS_PUBLIC_HEADERS VORBIS_HEADERS VORBIS_SOURCES)
	GET_DIRECTORY_PROPERTY(VAR_FILES DIRECTORY "vorbis/lib" DEFINITION ${VAR})

	FOREACH(VF ${VAR_FILES})
		LIST(APPEND MBEW_VORBIS_FILES "vorbis/lib/${VF}")
	ENDFOREACH()
ENDFOREACH()

INCLUDE_DIRECTORIES(${MBEW_VORBIS_INCLUDE_DIRS})

ADD_LIBRARY(mbew-vorbis ${MBEW_VORBIS_FILES})

TARGET_LINK_LIBRARIES(mbew-vorbis mbew-ogg)

