PROJECT(mbew-vpx)

ENABLE_LANGUAGE(ASM_NASM)

SET(CMAKE_C_FLAGS "-mmmx -mavx -mavx2 -msse -msse2 -msse3 -mssse3 -msse4.1")

SET(MBEW_VPX_SRC_FILES
	"libvpx/vpx/src/vpx_decoder.c"
	"libvpx/vpx/src/vpx_encoder.c"
	"libvpx/vpx/src/vpx_codec.c"
	"libvpx/vpx/src/vpx_image.c"
	"libvpx/vpx_mem/vpx_mem.c"
	"libvpx/vpx_scale/generic/vpx_scale.c"
	"libvpx/vpx_scale/generic/yv12config.c"
	"libvpx/vpx_scale/generic/yv12extend.c"
	"libvpx/vpx_scale/generic/gen_scalers.c"
	"libvpx/vpx_scale/vpx_scale_rtcd.c"
	"libvpx/vpx_dsp/prob.c"
	"libvpx/vpx_dsp/bitwriter.c"
	"libvpx/vpx_dsp/bitwriter_buffer.c"
	"libvpx/vpx_dsp/psnr.c"
	"libvpx/vpx_dsp/bitreader.c"
	"libvpx/vpx_dsp/bitreader_buffer.c"
	"libvpx/vpx_dsp/intrapred.c"
	"libvpx/vpx_dsp/add_noise.c"
	"libvpx/vpx_dsp/deblock.c"
	"libvpx/vpx_dsp/vpx_convolve.c"
	"libvpx/vpx_dsp/x86/vpx_asm_stubs.c"
	"libvpx/vpx_dsp/x86/vpx_subpixel_8t_intrin_avx2.c"
	"libvpx/vpx_dsp/x86/vpx_subpixel_8t_intrin_ssse3.c"
	"libvpx/vpx_dsp/loopfilter.c"
	"libvpx/vpx_dsp/x86/loopfilter_sse2.c"
	"libvpx/vpx_dsp/x86/loopfilter_avx2.c"
	"libvpx/vpx_dsp/fwd_txfm.c"
	"libvpx/vpx_dsp/x86/fwd_txfm_sse2.c"
	"libvpx/vpx_dsp/x86/fwd_txfm_avx2.c"
	"libvpx/vpx_dsp/inv_txfm.c"
	"libvpx/vpx_dsp/x86/inv_txfm_sse2.c"
	"libvpx/vpx_dsp/quantize.c"
	"libvpx/vpx_dsp/x86/quantize_sse2.c"
	"libvpx/vpx_dsp/avg.c"
	"libvpx/vpx_dsp/x86/avg_intrin_sse2.c"
	"libvpx/vpx_dsp/sad.c"
	"libvpx/vpx_dsp/subtract.c"
	"libvpx/vpx_dsp/sum_squares.c"
	"libvpx/vpx_dsp/x86/sum_squares_sse2.c"
	"libvpx/vpx_dsp/x86/sad4d_avx2.c"
	"libvpx/vpx_dsp/x86/sad_avx2.c"
	"libvpx/vpx_dsp/variance.c"
	"libvpx/vpx_dsp/x86/variance_sse2.c"
	"libvpx/vpx_dsp/x86/variance_avx2.c"
	"libvpx/vpx_dsp/x86/variance_impl_avx2.c"
	"libvpx/vpx_dsp/vpx_dsp_rtcd.c"
	"libvpx/vpx_util/vpx_thread.c"
	"libvpx/vp8/common/alloccommon.c"
	"libvpx/vp8/common/blockd.c"
	"libvpx/vp8/common/copy_c.c"
	"libvpx/vp8/common/dequantize.c"
	"libvpx/vp8/common/entropy.c"
	"libvpx/vp8/common/entropymode.c"
	"libvpx/vp8/common/entropymv.c"
	"libvpx/vp8/common/extend.c"
	"libvpx/vp8/common/filter.c"
	"libvpx/vp8/common/findnearmv.c"
	"libvpx/vp8/common/generic/systemdependent.c"
	"libvpx/vp8/common/idct_blk.c"
	"libvpx/vp8/common/idctllm.c"
	"libvpx/vp8/common/rtcd.c"
	"libvpx/vp8/common/vp8_loopfilter.c"
	"libvpx/vp8/common/loopfilter_filters.c"
	"libvpx/vp8/common/mbpitch.c"
	"libvpx/vp8/common/modecont.c"
	"libvpx/vp8/common/quant_common.c"
	"libvpx/vp8/common/reconinter.c"
	"libvpx/vp8/common/reconintra.c"
	"libvpx/vp8/common/reconintra4x4.c"
	"libvpx/vp8/common/setupintrarecon.c"
	"libvpx/vp8/common/swapyv12buffer.c"
	"libvpx/vp8/common/treecoder.c"
	"libvpx/vp8/common/x86/filter_x86.c"
	"libvpx/vp8/common/x86/vp8_asm_stubs.c"
	"libvpx/vp8/common/x86/loopfilter_x86.c"
	"libvpx/vp8/common/mfqe.c"
	"libvpx/vp8/common/postproc.c"
	"libvpx/vp8/common/x86/idct_blk_mmx.c"
	"libvpx/vp8/common/x86/idct_blk_sse2.c"
	"libvpx/vp8/vp8_cx_iface.c"
	"libvpx/vp8/encoder/bitstream.c"
	"libvpx/vp8/encoder/boolhuff.c"
	"libvpx/vp8/encoder/dct.c"
	"libvpx/vp8/encoder/encodeframe.c"
	"libvpx/vp8/encoder/encodeintra.c"
	"libvpx/vp8/encoder/encodemb.c"
	"libvpx/vp8/encoder/encodemv.c"
	"libvpx/vp8/encoder/ethreading.c"
	"libvpx/vp8/encoder/firstpass.c"
	"libvpx/vp8/encoder/denoising.c"
	"libvpx/vp8/encoder/lookahead.c"
	"libvpx/vp8/encoder/mcomp.c"
	"libvpx/vp8/encoder/modecosts.c"
	"libvpx/vp8/encoder/onyx_if.c"
	"libvpx/vp8/encoder/pickinter.c"
	"libvpx/vp8/encoder/picklpf.c"
	"libvpx/vp8/encoder/vp8_quantize.c"
	"libvpx/vp8/encoder/ratectrl.c"
	"libvpx/vp8/encoder/rdopt.c"
	"libvpx/vp8/encoder/segmentation.c"
	"libvpx/vp8/encoder/tokenize.c"
	"libvpx/vp8/encoder/treewriter.c"
	"libvpx/vp8/encoder/temporal_filter.c"
	"libvpx/vp8/encoder/x86/vp8_enc_stubs_mmx.c"
	"libvpx/vp8/encoder/x86/vp8_quantize_sse2.c"
	"libvpx/vp8/encoder/x86/quantize_ssse3.c"
	"libvpx/vp8/encoder/x86/quantize_sse4.c"
	"libvpx/vp8/encoder/x86/denoising_sse2.c"
	"libvpx/vp8/encoder/x86/vp8_enc_stubs_sse2.c"
	"libvpx/vp8/vp8_dx_iface.c"
	"libvpx/vp8/decoder/dboolhuff.c"
	"libvpx/vp8/decoder/decodemv.c"
	"libvpx/vp8/decoder/decodeframe.c"
	"libvpx/vp8/decoder/detokenize.c"
	"libvpx/vp8/decoder/onyxd_if.c"
	"libvpx/vp8/decoder/threading.c"
	"libvpx/vp9/common/vp9_alloccommon.c"
	"libvpx/vp9/common/vp9_blockd.c"
	"libvpx/vp9/common/vp9_entropy.c"
	"libvpx/vp9/common/vp9_entropymode.c"
	"libvpx/vp9/common/vp9_entropymv.c"
	"libvpx/vp9/common/vp9_frame_buffers.c"
	"libvpx/vp9/common/vp9_idct.c"
	"libvpx/vp9/common/vp9_filter.c"
	"libvpx/vp9/common/vp9_pred_common.c"
	"libvpx/vp9/common/vp9_rtcd.c"
	"libvpx/vp9/common/vp9_scale.c"
	"libvpx/vp9/common/vp9_seg_common.c"
	"libvpx/vp9/common/vp9_tile_common.c"
	"libvpx/vp9/common/vp9_loopfilter.c"
	"libvpx/vp9/common/vp9_thread_common.c"
	"libvpx/vp9/common/vp9_mvref_common.c"
	"libvpx/vp9/common/vp9_quant_common.c"
	"libvpx/vp9/common/vp9_reconinter.c"
	"libvpx/vp9/common/vp9_reconintra.c"
	"libvpx/vp9/common/vp9_common_data.c"
	"libvpx/vp9/common/vp9_scan.c"
	"libvpx/vp9/common/x86/vp9_idct_intrin_sse2.c"
	"libvpx/vp9/vp9_cx_iface.c"
	"libvpx/vp9/encoder/vp9_bitstream.c"
	"libvpx/vp9/encoder/vp9_context_tree.c"
	"libvpx/vp9/encoder/vp9_cost.c"
	"libvpx/vp9/encoder/vp9_dct.c"
	"libvpx/vp9/encoder/vp9_encodeframe.c"
	"libvpx/vp9/encoder/vp9_encodemb.c"
	"libvpx/vp9/encoder/vp9_encodemv.c"
	"libvpx/vp9/encoder/vp9_ethread.c"
	"libvpx/vp9/encoder/vp9_extend.c"
	"libvpx/vp9/encoder/vp9_firstpass.c"
	"libvpx/vp9/encoder/vp9_lookahead.c"
	"libvpx/vp9/encoder/vp9_mcomp.c"
	"libvpx/vp9/encoder/vp9_encoder.c"
	"libvpx/vp9/encoder/vp9_picklpf.c"
	"libvpx/vp9/encoder/vp9_quantize.c"
	"libvpx/vp9/encoder/vp9_ratectrl.c"
	"libvpx/vp9/encoder/vp9_rd.c"
	"libvpx/vp9/encoder/vp9_rdopt.c"
	"libvpx/vp9/encoder/vp9_pickmode.c"
	"libvpx/vp9/encoder/vp9_segmentation.c"
	"libvpx/vp9/encoder/vp9_speed_features.c"
	"libvpx/vp9/encoder/vp9_subexp.c"
	"libvpx/vp9/encoder/vp9_svc_layercontext.c"
	"libvpx/vp9/encoder/vp9_resize.c"
	"libvpx/vp9/encoder/vp9_tokenize.c"
	"libvpx/vp9/encoder/vp9_treewriter.c"
	"libvpx/vp9/encoder/vp9_aq_variance.c"
	"libvpx/vp9/encoder/vp9_aq_360.c"
	"libvpx/vp9/encoder/vp9_aq_cyclicrefresh.c"
	"libvpx/vp9/encoder/vp9_aq_complexity.c"
	"libvpx/vp9/encoder/vp9_alt_ref_aq.c"
	"libvpx/vp9/encoder/vp9_skin_detection.c"
	"libvpx/vp9/encoder/vp9_noise_estimate.c"
	"libvpx/vp9/encoder/vp9_temporal_filter.c"
	"libvpx/vp9/encoder/vp9_mbgraph.c"
	"libvpx/vp9/encoder/x86/vp9_quantize_sse2.c"
	"libvpx/vp9/encoder/x86/vp9_diamond_search_sad_avx.c"
	"libvpx/vp9/encoder/x86/vp9_dct_intrin_sse2.c"
	"libvpx/vp9/encoder/x86/vp9_dct_ssse3.c"
	"libvpx/vp9/encoder/x86/vp9_frame_scale_ssse3.c"
	"libvpx/vp9/encoder/x86/vp9_error_intrin_avx2.c"
	"libvpx/vp9/vp9_dx_iface.c"
	"libvpx/vp9/decoder/vp9_decodemv.c"
	"libvpx/vp9/decoder/vp9_decodeframe.c"
	"libvpx/vp9/decoder/vp9_detokenize.c"
	"libvpx/vp9/decoder/vp9_dthread.c"
	"libvpx/vp9/decoder/vp9_decoder.c"
	"libvpx/vp9/decoder/vp9_dsubexp.c"
	"vpx_config.c"
)

SET(MBEW_VPX_ASM_FILES
	"libvpx/vpx_ports/emms.asm"
	"libvpx/vpx_ports/x86_abi_support.asm"
	"libvpx/vpx_dsp/x86/intrapred_sse2.asm"
	"libvpx/vpx_dsp/x86/intrapred_ssse3.asm"
	"libvpx/vpx_dsp/x86/vpx_subpixel_8t_ssse3.asm"
	"libvpx/vpx_dsp/x86/add_noise_sse2.asm"
	"libvpx/vpx_dsp/x86/deblock_sse2.asm"
	"libvpx/vpx_dsp/x86/vpx_subpixel_8t_sse2.asm"
	"libvpx/vpx_dsp/x86/vpx_subpixel_bilinear_sse2.asm"
	"libvpx/vpx_dsp/x86/vpx_subpixel_bilinear_ssse3.asm"
	"libvpx/vpx_dsp/x86/vpx_convolve_copy_sse2.asm"
	"libvpx/vpx_dsp/x86/fwd_txfm_ssse3_x86_64.asm"
	"libvpx/vpx_dsp/x86/inv_wht_sse2.asm"
	"libvpx/vpx_dsp/x86/inv_txfm_ssse3_x86_64.asm"
	"libvpx/vpx_dsp/x86/quantize_ssse3_x86_64.asm"
	"libvpx/vpx_dsp/x86/quantize_avx_x86_64.asm"
	"libvpx/vpx_dsp/x86/avg_ssse3_x86_64.asm"
	"libvpx/vpx_dsp/x86/sad_sse3.asm"
	"libvpx/vpx_dsp/x86/sad_ssse3.asm"
	"libvpx/vpx_dsp/x86/sad_sse4.asm"
	"libvpx/vpx_dsp/x86/sad4d_sse2.asm"
	"libvpx/vpx_dsp/x86/sad_sse2.asm"
	"libvpx/vpx_dsp/x86/subtract_sse2.asm"
	"libvpx/vpx_dsp/x86/ssim_opt_x86_64.asm"
	"libvpx/vpx_dsp/x86/subpel_variance_sse2.asm"
	"libvpx/vp8/common/x86/dequantize_mmx.asm"
	"libvpx/vp8/common/x86/idctllm_mmx.asm"
	"libvpx/vp8/common/x86/recon_mmx.asm"
	"libvpx/vp8/common/x86/subpixel_mmx.asm"
	"libvpx/vp8/common/x86/copy_sse2.asm"
	"libvpx/vp8/common/x86/idctllm_sse2.asm"
	"libvpx/vp8/common/x86/recon_sse2.asm"
	"libvpx/vp8/common/x86/subpixel_sse2.asm"
	"libvpx/vp8/common/x86/loopfilter_sse2.asm"
	"libvpx/vp8/common/x86/iwalsh_sse2.asm"
	"libvpx/vp8/common/x86/copy_sse3.asm"
	"libvpx/vp8/common/x86/subpixel_ssse3.asm"
	"libvpx/vp8/common/x86/mfqe_sse2.asm"
	"libvpx/vp8/common/x86/loopfilter_block_sse2_x86_64.asm"
	"libvpx/vp8/encoder/x86/dct_sse2.asm"
	"libvpx/vp8/encoder/x86/fwalsh_sse2.asm"
	"libvpx/vp8/encoder/x86/temporal_filter_apply_sse2.asm"
	"libvpx/vp8/encoder/x86/quantize_mmx.asm"
	"libvpx/vp8/encoder/x86/encodeopt.asm"
	"libvpx/vp9/encoder/x86/vp9_temporal_filter_apply_sse2.asm"
	"libvpx/vp9/encoder/x86/vp9_dct_sse2.asm"
	"libvpx/vp9/encoder/x86/vp9_error_sse2.asm"
	"libvpx/vp9/encoder/x86/vp9_quantize_ssse3_x86_64.asm"
)

SET(MBEW_VPX_PUBLIC_HEADER_FILES)
SET(MBEW_VPX_PRIVATE_HEADER_FILES)

SET(MBEW_VPX_HEADER_FILES
	${MBEW_VPX_PUBLIC_HEADER_FILES}
	${MBEW_VPX_PRIVATE_HEADER_FILES}
)

SET(MBEW_VPX_INCLUDE_DIRS
	"${PROJECT_SOURCE_DIR}/libvpx/"
	"${PROJECT_SOURCE_DIR}"
)

INCLUDE_DIRECTORIES(${MBEW_VPX_INCLUDE_DIRS})

SOURCE_GROUP("Header Files" FILES ${MBEW_VPX_HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${MBEW_VPX_SRC_FILES})

ADD_LIBRARY(mbew-vpx STATIC
	${MBEW_VPX_HEADER_FILES}
	${MBEW_VPX_SRC_FILES}
	${MBEW_VPX_ASM_FILES}
)

